# chess

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  clean-build.sh  events.c  events.h  lichess-build.sh  linux_main.c  pcgrandom.c  pcgrandom.h  platform.c  platform.h  renderer.c  renderer.h  win-build.sh  windows_common.h  windows_main.c
assets/images/: LICENSE
images/: LICENSE
include/: assets.h  events.h  fonts.h  game.h  linux_common.h  pcgrandom.h  platform.h  renderer.h  windows_common.h
lichess-bot/include/: lichess_game.h  lichess_random.h
lichess-bot/src/: lichess_game.c  lichess_main.c  lichess_random.c
src/: assets.c  events.c  fonts.c  game.c  lichess_main.c  linux_common.c  linux_main.c  pcgrandom.c  platform.c  renderer.c  windows_common.c  windows_main.c
