cmake_minimum_required(VERSION 3.13)
project(Chess LANGUAGES C)
set(COMMON_SOURCE_FILES "src/events.c" "src/game.c" "src/pcgrandom.c" "src/platform.c" "src/renderer.c")
if (WIN32)
    add_executable(chess WIN32 ${COMMON_SOURCE_FILES})
    target_sources(chess PRIVATE src/windows_main.c src/windows_common.c)
    target_link_libraries(chess PRIVATE Bcrypt) # Windows system libary.  Used for BCryptGenRandom for seeding RNG.
else()
    add_executable(chess ${COMMON_SOURCE_FILES})
    target_sources(chess PRIVATE src/linux_main.c src/linux_common.c)
    find_package(X11 REQUIRED)
    target_include_directories(chess PRIVATE ${X11_INCLUDE_DIR})
    target_link_libraries(chess PRIVATE ${X11_LIBRARIES})
endif()
target_include_directories(chess PRIVATE include)
